--- a/index.html
+++ b/index.html
@@ -1,24 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-    <body>
-        <header>
-            <img class="logo" src="./labhead.png"><img>
+    <link rel="stylesheet" href="style.css">
 
-            <nav>
-                <ul class="nav__links">
-                    <li><a href="#">Trivia</a></li>
-                    <li><a href="#">Nosotras</a></li>
-                </ul>
-            </nav>
-        </header>
-    </body>
+</head>
+
+
+<body>
+    <header>
+        <img class="logo" src="./labhead.png"><img>
+
+        <nav>
+            <ul class="nav__links">
+                <li><a href="#">Trivia</a></li>
+                <li><a href="#">Nosotras</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="bienvenida">
+        <h1>¡Bienvenida a Trivia Laboratoria!</span></h1> 
+        <!--Usamos el evento onClick para llamar a la función guardar nombre-->
+   <a class="nombre" onClick="guardarNombre()">Ingresa tu nombre</a> 
+    </div>
+    <div class="gif">
+        <img src="https://media.giphy.com/media/iIqmM5tTjmpOB9mpbn/giphy.gif">
+    </div>
+
+    <script src="./app.js"></script>
+
 </body>
+</body>
+
 </html>
