--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <img src="https://media.giphy.com/media/iIqmM5tTjmpOB9mpbn/giphy.gif">
     </div>
 
-    <script src="./app.js"></script>
+    <script src="app.js"></script>
     <!--El <script src="./app.js"></script> permite enlazar o usar la informacion del 
     archivo de JScript en el html -->
 </body>
