--- a/triviahistoria.html
+++ b/triviahistoria.html
@@ -18,8 +18,13 @@
         </nav>
     </header>
 
+<div id="preguntas" class="preguntas">
+    
+</div>
 
-Hola Aleja
+        
 
+
+        <script src="./app.js"></script>
 </body>
 </html>
