Trivia Historia y música con estilos

--- a/triviamusica.html
+++ b/triviamusica.html
@@ -18,6 +18,9 @@
                 </ul>
             </nav>
         </header>
-       
+        <div id="preguntas" class="preguntas">
+            
+        </div>
+        <script src="app.js"></script>
 </body>
 </html>
